started to work

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,15 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: /run/secrets/  # Path to the configuration files (stored as secrets)
-    volumes:
-      - "/Users/theophilushomawoo/Documents/stage/galeo/python/OrthancGif:/python/:ro"
+    #volumes:
+    #  - "/Users/theophilushomawoo/Documents/stage/galeo/python/OrthancGif:/python/:ro"
     ports:
       - 4242:4242
       - 8042:8042
-    secrets:
-      - orthanc.json
     environment:
        ORTHANC__NAME: "orthanc"
        VERBOSE_ENABLED: "true"
-       VERBOSE_STARTUP: "true"
+       #VERBOSE_STARTUP: "true"
+       PYTHON_PLUGIN_ENABLED: "true"
        ORTHANC__PYTHON_VERBOSE: "true"
-       PLUGIN__PYTHON_ENABLED: "true"
-       ORTHANC__PYTHON_SCRIPT: "/python/plugin.py"
-secrets:
-  orthanc.json:
-    file: orthanc.json
+       ORTHANC__PYTHON_SCRIPT: "/python/mip_generator.py"
