--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,4 @@ services:
        #VERBOSE_STARTUP: "true"
        PYTHON_PLUGIN_ENABLED: "true"
        ORTHANC__PYTHON_VERBOSE: "true"
-       ORTHANC__PYTHON_SCRIPT: "/python/mip_generator.py"
+       ORTHANC__PYTHON_SCRIPT: "/python/index.py"
