--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    #volumes:
-    #  - "/Users/theophilushomawoo/Documents/stage/galeo/python/OrthancGif:/python/:ro"
-    volumes: [ "dicom_storage:/var/lib/orthanc/db:Z" ]
+    volumes:
+      - "/Users/theophilushomawoo/Documents/stage/galeo/python/OrthancGif/python:/python/:ro"
+      - "dicom_storage:/var/lib/orthanc/db:Z"
     ports:
       - 4242:4242
       - 8042:8042
     environment:
        ORTHANC__NAME: "orthanc"
-       VERBOSE_ENABLED: "true"
+       VERBOSE_ENABLED: "false"
        #VERBOSE_STARTUP: "true"
        PYTHON_PLUGIN_ENABLED: "true"
-       ORTHANC__PYTHON_VERBOSE: "true"
+       ORTHANC__PYTHON_VERBOSE: "false"
        ORTHANC__PYTHON_SCRIPT: "/python/index.py"
        NEURO_PLUGIN_ENABLED: "true"
 
